[aliases]
test = pytest

[bdist_wheel]
# Generate a wheel for Python 3 only.
universal = 0

[flake8]
max-line-length = 119
exclude =
    .git,
    *.pyc,
    __pycache__,
    build,
    dist,
    docs,
    .eggs

[metadata]
# Includes the license file in the wheel
license_files = LICENSE

[mypy]
ignore_missing_imports = True

[options]
setup_requires = setuptools_scm

[tool:pytest]
testpaths = tests
# botocore throws off deprecation warnings
filterwarnings = ignore::DeprecationWarning
